@@ -161,7 +161,7 @@ name|runtime
 operator|.
 name|log
 operator|.
-name|NullLogSystem
+name|NullLogChute
 import|;
 end_import
 
@@ -1050,7 +1050,6 @@ name|openWriter
 argument_list|(
 name|type
 argument_list|)
-init|;
 init|)
 block|{
 if|if
@@ -1154,7 +1153,7 @@ name|RuntimeConstants
 operator|.
 name|RUNTIME_LOG_LOGSYSTEM_CLASS
 argument_list|,
-name|NullLogSystem
+name|NullLogChute
 operator|.
 name|class
 operator|.
