@@ -2219,9 +2219,6 @@ block|{
 name|ObjEntity
 name|targetEntity
 init|=
-operator|(
-name|ObjEntity
-operator|)
 name|relationship
 operator|.
 name|getTargetEntity
@@ -2758,8 +2755,6 @@ parameter_list|()
 block|{
 name|String
 name|path
-init|=
-literal|null
 decl_stmt|;
 if|if
 condition|(
@@ -2952,23 +2947,10 @@ name|dirType
 argument_list|,
 literal|"java"
 argument_list|)
-operator|+
-name|path
-operator|.
-name|substring
-argument_list|(
-name|idx
-operator|+
-name|resourcePath
-operator|.
-name|length
-argument_list|()
-argument_list|)
 return|;
 block|}
 specifier|private
 specifier|static
-specifier|final
 name|String
 name|buildFilePath
 parameter_list|(
